# DynaGen

./: .gitignore  pyproject.toml
baselines/LLaMEA/: CLAUDE.md  pyproject-lite.toml  pyproject.toml
baselines/truck-sim/: .gitignore  check_truck_scaling.py  environment.yml  generate_datasets.py  main.py  regen_data.sh  testing.py  testing.sh
configs/: bbob_ioh.yaml  tsp_openai.yaml
configs/bbob/: bbob_calls_20.yaml  bbob_calls_30.yaml  bbob_calls_40.yaml  bbob_deepseek_example.yaml
configs/dvrp/: dvrp_calls_20.yaml  dvrp_deepseek_example.yaml
configs/tsp/: tsp_calls_20.yaml  tsp_calls_30.yaml  tsp_calls_40.yaml  tsp_deepseek.yaml  tsp_deepseek_example.yaml
data/dvrp/: README.md
docs/: archive_conditioned_evolution.md  framework_flow.md  llm_call_comparison.md  tsp_flow.md
dynagen/: __init__.py  cli.py  config.py
dynagen/baselines/: __init__.py  bbob.py  dvrp.py  tsp.py
dynagen/candidates/: __init__.py  candidate.py  parser.py  validation.py
dynagen/comparison/: __init__.py  bbob.py
dynagen/domain/: __init__.py  bbob.py  dvrp.py  tour.py  tsp_instance.py  tsp_parser.py  tsp_synthetic.py
dynagen/evaluation/: __init__.py  base.py  bbob_archive.py  bbob_evaluator.py  bbob_gradient.py  bbob_metrics.py  bbob_reflection.py  dvrp_archive.py  dvrp_evaluator.py  dvrp_gradient.py  dvrp_metrics.py  dvrp_reflection.py  evaluator.py  metrics.py  tsp_archive.py  tsp_evaluator.py  tsp_gradient.py  tsp_metrics.py  tsp_reflection.py
tests/: test_archive.py  test_metric_vector_selection.py  test_tsp_synthetic_pool.py  test_verbal_gradients.py
(+2774 files in other folders)
