[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynagen"
version = "0.1.0"
description = "TSP metaheuristic generation framework"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
test = ["pytest>=8"]

[project.scripts]
dynagen = "dynagen.cli:main"

[tool.setuptools.packages.find]
include = ["dynagen*"]
